[package]
name = "noxu-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Engine orchestration for Noxu DB"

[dependencies]
parking_lot = { workspace = true }
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-config = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-txn = { workspace = true }
noxu-evictor = { workspace = true }
noxu-cleaner = { workspace = true }
noxu-recovery = { workspace = true }
noxu-dbi = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# DST Milestone 2 (Phase 2a): only in the graph under `--cfg noxu_shuttle`.
# Lets the DaemonManager shutdown/wakeup coordination be scheduled by shuttle
# via the noxu_util::dst_sync seam.  Default builds never pull shuttle in.
[target.'cfg(noxu_shuttle)'.dependencies]
shuttle = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(noxu_shuttle)'.dev-dependencies]
shuttle = { workspace = true }
noxu-util = { workspace = true }
