[package]
name = "noxu-evictor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Cache eviction for Noxu DB"

[dependencies]
parking_lot = { workspace = true }
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-tree = { workspace = true }
noxu-log = { workspace = true }
noxu-sync = { workspace = true }
noxu-recovery = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
lru = "0.16"

[dev-dependencies]
tempfile = "3"

# DST shuttle coverage for the SHARED_CACHE register/deregister/evict
# interleavings: only in the graph under `--cfg noxu_shuttle`.  Default
# builds and `cargo test` never pull shuttle in.
[target.'cfg(noxu_shuttle)'.dev-dependencies]
shuttle = { workspace = true }

[lints]
workspace = true
