[package]
name = "noxu-latch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Latching primitives for Noxu DB (shared/exclusive latches)"
publish = false  # internal implementation detail; consume via noxu-db

[dependencies]
noxu-util = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
