[package]
name = "noxu-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Log-structured storage engine for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-config = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
byteorder = { workspace = true }
fs2 = { workspace = true }
memmap2 = { workspace = true }
lru = "0.12"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "log_bench"
harness = false
