[package]
name = "noxu-log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Log-structured storage engine for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-config = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
byteorder = { workspace = true }
fs2 = { workspace = true }
memmap2 = { workspace = true }
lru = "0.16"

# DST Milestone 2 (Phase 2a): only in the graph under `--cfg noxu_shuttle`.
# Lets the FsyncManager group-commit protocol be scheduled by shuttle via the
# noxu_util::dst_sync seam.  Default builds never pull shuttle in.
[target.'cfg(noxu_shuttle)'.dependencies]
shuttle = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
hegeltest = { workspace = true }
criterion = { workspace = true }

# DST Milestone 2 (Phase 2a): shuttle tests in tests/shuttle_*.rs are gated
# behind `#![cfg(noxu_shuttle)]`, so these dev-deps only matter under that cfg.
[target.'cfg(noxu_shuttle)'.dev-dependencies]
shuttle = { workspace = true }
noxu-util = { workspace = true }

[[bench]]
name = "log_bench"
harness = false
