[package]
name = "noxu-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional observability integration for Noxu DB (metrics, tracing, OpenTelemetry)"

[dependencies]
tracing = "0.1"
metrics = "0.24"

# OpenTelemetry support behind a sub-feature
opentelemetry = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[lints]
workspace = true
