[package]
name = "noxu-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Optional observability integration for Noxu DB (metrics, tracing, OpenTelemetry)"
# v2.3.0: every crate is `publish = false` while the workspace dependency graph
# still uses `path = "..."` deps. See the 2026 review.

[dependencies]
tracing = "0.1"
metrics = "0.24"

# OpenTelemetry support behind a sub-feature
opentelemetry = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[lints]
workspace = true
