[package]
name = "noxu-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Optional observability integration for Noxu DB (metrics, tracing, OpenTelemetry)"
# v2.3.0: every crate is `publish = false` while the workspace dependency graph
# still uses `path = "..."` deps. See the 2026 review.

[dependencies]
tracing = "0.1"
metrics = "0.24"
log = { workspace = true }

# Source of the EnvironmentStats snapshot the periodic exporter samples.
# Only pulled when the `export` feature is enabled.
noxu-engine = { workspace = true, optional = true }

# OpenTelemetry support behind a sub-feature
opentelemetry = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Convenience Prometheus exposition (scrape endpoint). Optional; users may
# install any other `metrics` recorder instead.
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false }

[features]
default = []
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
# `export` adds the EnvironmentStats -> metrics-facade mapping + periodic sampler.
export = ["dep:noxu-engine"]
# `prometheus` pulls a built-in Prometheus exposition recorder.
prometheus = ["export", "dep:metrics-exporter-prometheus"]

[lints]
workspace = true
