[package]
name = "noxu-persist-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Derive macros for the Noxu DB Direct Persistence Layer (Entity, PrimaryKey, SecondaryKey)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true

[dev-dependencies]
trybuild = "1"
# The noxu umbrella crate is the runtime side of the macro; tests invoke it.
# Using `noxu` (not `noxu-persist` directly) because the derive emits
# `::noxu::persist::…` paths — the umbrella must be in scope.
noxu = { workspace = true, features = ["persist"] }
tempfile = "3"
