[package]
name = "noxu-persist-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Derive macros for the Noxu DB Direct Persistence Layer (Entity, PrimaryKey, SecondaryKey)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true

[dev-dependencies]
trybuild = "1"
# Circular dev-dependencies on the runtime side of the macro. Declared
# path-only (no version) on purpose: this is the serde / serde_derive
# pattern. cargo publish strips path-only dev-dependencies, which breaks the
# otherwise-unpublishable cycle (these versions are not yet on crates.io when
# this crate is published). They still resolve locally for trybuild tests.
noxu = { path = "../noxu", features = ["persist"] }
noxu-persist = { path = "../noxu-persist" }
tempfile = "3"
