[package]
name = "noxu-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Derive-macro-based entity persistence for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-db = { workspace = true }
noxu-persist-derive = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
