[package]
name = "noxu-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Derive-macro-based entity persistence for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-db = { workspace = true }
noxu-persist-derive = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
# The derive macros emit ::noxu::persist::… paths; the umbrella must be
# present in dev-dependency tests that exercise derived code. Declared
# path-only (no version) so cargo publish strips this circular
# dev-dependency (serde / serde_derive pattern); resolves locally for tests.
noxu = { path = "../noxu", features = ["persist"] }
