[package]
name = "noxu-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Checkpoint-based crash recovery for Noxu DB"

[dependencies]
noxu-util = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-txn = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "recovery_bench"
harness = false

[lints]
workspace = true
