[package]
name = "noxu-rep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Replication and high availability for Noxu DB"

[features]
# In-memory `RepTestBase` / `RepEnvInfo` harness for porting JE rep tests.
# Auto-enabled for `cargo test`; not part of the released API surface.
test-harness = []
# Pure-Rust TLS backend (rustls + ring). No C dependencies.
# Default for any feature that requires TLS.
tls-rustls = ["dep:rustls", "dep:rustls-pemfile", "dep:rcgen"]
# OpenSSL / LibreSSL backend via the system-installed library.
# On Linux, links against whichever libssl.so is on the system (OpenSSL or
# LibreSSL). Set OPENSSL_DIR to point at a specific installation.
tls-native = ["dep:native-tls"]
# QUIC transport over multiplexed streams. QUIC mandates TLS 1.3, so this
# always pulls in the pure-Rust TLS backend.
quic = ["dep:quinn", "dep:tokio", "dep:bytes", "tls-rustls"]

[dependencies]
hashbrown = { workspace = true }
libc = { workspace = true }
noxu-engine = { workspace = true }
noxu-util = { workspace = true }
noxu-log = { workspace = true }
noxu-txn = { workspace = true }
noxu-tree = { workspace = true }
noxu-sync = { workspace = true }
noxu-dbi = { workspace = true }
noxu-recovery = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
quoracle = { workspace = true }
crc32fast = { workspace = true }
# Optional QUIC transport deps (implied by the `quic` feature).
quinn  = { workspace = true, optional = true }
tokio  = { workspace = true, optional = true }
bytes  = { workspace = true, optional = true }
# Optional TLS deps: tls-rustls (pure Rust) or tls-native (system OpenSSL/LibreSSL).
rustls         = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rcgen          = { workspace = true, optional = true }
native-tls     = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
rand = "0.8"
noxu-evictor = { path = "../noxu-evictor" }
# Used only by F1 end-to-end tests that wire a noxu-db Environment to a
# noxu-rep ReplicatedEnvironment via the ReplicaAckCoordinator trait.
noxu-db = { path = "../noxu-db" }
# Self-dependency to enable the in-memory `RepTestBase` harness for tests
# in `tests/*.rs` (integration tests link against the published crate).
noxu-rep = { path = ".", features = ["test-harness"] }

[lints]
workspace = true

[package.metadata.docs.rs]
# Use the pure-Rust TLS backend so docs.rs does not need C libssl/libcrypto.
features = ["tls-rustls"]
targets = ["x86_64-unknown-linux-gnu"]
