[package]
name = "noxu-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Stateright executable specifications for noxu protocols"
publish = false

[dependencies]
# Stateright is the core model checker.
stateright = { workspace = true }

# Production crates whose public types the specs import. The point is
# coupling: a refactor that changes a variant of LockType, removes an
# XaFlags constant, etc. will break the noxu-spec build via the
# exhaustive matches inside each spec module. Without this, the
# specs would silently model a stale version of the enum.
noxu-txn = { workspace = true }
noxu-xa = { workspace = true }

[dev-dependencies]
# Specs are validated as ordinary `cargo test` cases — no external
# runner. The state spaces are bounded in code so a `cargo test
# --release` finishes the whole suite in seconds.

[lints]
workspace = true
