[package]
name = "noxu-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Noxu DB synchronization primitives: futex-based Mutex/RwLock/Condvar"
publish = false

[dependencies]
lock_api = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
