[package]
name = "noxu-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Noxu DB synchronization primitives: futex-based Mutex/RwLock/Condvar"

[dependencies]
lock_api = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
