[package]
name = "noxu-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "B-tree implementation for Noxu DB"
publish = false  # internal implementation detail; consume via noxu-db

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-sync = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "tree_bench"
harness = false

[lints]
workspace = true
