[package]
name = "noxu-txn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transaction management and locking for Noxu DB"

[dependencies]
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"

[[bench]]
name = "txn_bench"
harness = false

[lints]
workspace = true
