[package]
name = "noxu-txn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Transaction management and locking for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"

[[bench]]
name = "txn_bench"
harness = false

[lints]
workspace = true
