[package]
name = "noxu-txn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Transaction management and locking for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }

# DST wave 2: only in the graph under `--cfg noxu_shuttle`.  Lets the
# lock_manager deadlock-detection / grant path be scheduled by shuttle via the
# noxu_util::dst_sync_pl seam.  Default builds never pull shuttle in.
[target.'cfg(noxu_shuttle)'.dependencies]
shuttle = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hegeltest = { workspace = true }
tempfile = "3"

# DST wave 2: shuttle tests in tests/shuttle_*.rs are gated behind
# `#![cfg(noxu_shuttle)]`, so these dev-deps only matter under that cfg.
[target.'cfg(noxu_shuttle)'.dev-dependencies]
shuttle = { workspace = true }
noxu-util = { workspace = true }

[[bench]]
name = "txn_bench"
harness = false

[lints]
workspace = true
