[package]
name = "noxu-util"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Internal utilities for Noxu DB (LSN, VLSN, byte encoding, stats framework)"

[dependencies]
hashbrown = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }

# DST Milestone 2 (Phase 2a): only in the graph under `--cfg noxu_shuttle`.
# Default / production builds never see shuttle — dst_sync re-exports std.
[target.'cfg(noxu_shuttle)'.dependencies]
shuttle = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
crc32fast = { workspace = true }
crc32c = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "util_bench"
harness = false

[lints]
workspace = true
