[package]
name = "noxu-xa"
version = "0.1.0"
edition = "2021"
description = "XA distributed transaction support for Noxu DB"
license = "MIT OR Apache-2.0"

[dependencies]
noxu-db = { path = "../noxu-db" }
noxu-txn = { path = "../noxu-txn" }
thiserror = "2"
log = "0.4"
hashbrown = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = { version = "0.8", features = ["small_rng"] }
