[package]
name = "noxu-xa"
version.workspace = true
# Pinned to edition 2021 (workspace is 2024) until a follow-up wave can
# address the edition-2024 clippy lints (`collapsible_if` for `if let` chains)
# that fire under the new edition. Tracked in
# the 2026 review.
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "XA distributed transaction support for Noxu DB"

[dependencies]
noxu-db = { workspace = true }
noxu-txn = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = { version = "0.8", features = ["small_rng"] }
