[package]
name = "noxu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
authors = ["Greg Burd <greg@burd.me>"]
description = "Embedded transactional key-value database engine: ACID transactions, log-structured B+tree, crash recovery, optional master-replica replication, XA, and typed persistence."
keywords = ["database", "embedded", "transactional", "btree", "wal"]
categories = ["database-implementations", "data-structures", "concurrency"]

[dependencies]
# Always-on core public API.
noxu-db    = { workspace = true }
noxu-bind  = { workspace = true }

# Optional higher-level layers (feature-gated).
noxu-collections    = { workspace = true, optional = true }
noxu-persist        = { workspace = true, optional = true }
noxu-persist-derive = { workspace = true, optional = true }
noxu-xa             = { workspace = true, optional = true }
noxu-rep            = { workspace = true, optional = true }
noxu-observe        = { workspace = true, optional = true }

[features]
# Lightweight higher-level layers on by default; networking / observability off.
default = ["collections", "persist", "xa"]

collections = ["dep:noxu-collections"]
persist     = ["dep:noxu-persist", "dep:noxu-persist-derive"]
xa          = ["dep:noxu-xa"]
replication = ["dep:noxu-rep"]
replication-tls-rustls = ["replication", "noxu-rep/tls-rustls"]
replication-tls-native = ["replication", "noxu-rep/tls-native"]
observability = ["dep:noxu-observe", "noxu-db/observability"]
# Experimental, non-default eviction policies (CLOCK/LIRS/ARC/CAR/CoolHot).
# Off by default; passthrough to noxu-db.  Enable only for benchmark work.
experimental-eviction-policies = [
    "noxu-db/experimental-eviction-policies",
]
# Built-in Prometheus exposition convenience (implies observability).
prometheus = ["observability", "noxu-observe/prometheus"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
