[package]
name = "noxu-cask"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A Redis RESP2-compatible key-value store backed by Noxu DB"
publish = false

[[bin]]
name = "cask"
path = "src/main.rs"

[dependencies]
noxu = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "signal", "macros", "sync"] }
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
